# human-duration

./: CHANGELOG.md  LICENSE  human-duration.cabal
src/Data/Duration/: Human.hs
test/: Main.hs
